--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".sign.SignUpActivity"></activity>
+        <activity android:name=".Diary.WriteActivity"></activity>
+        <activity android:name=".sign.SignUpActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".sign.SignInActivity" />
         <activity android:name=".StartActivity">
