--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Diary.PostActivity"></activity>
+        <activity android:name=".Diary.NoteSendActivity"></activity>
+        <activity android:name=".Diary.PostActivity" />
         <activity android:name=".Diary.WriteActivity" />
         <activity android:name=".sign.SignUpActivity" />
         <activity android:name=".MainActivity" />
