--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Diary.NoteActivity"></activity>
+        <activity
+            android:name=".account.AccountMainActivity"
+            android:label="@string/title_activity_account_main"></activity>
+        <activity android:name=".SelectMainActivity" />
+        <activity android:name=".Diary.DrawWriteActivity" />
+        <activity android:name=".Diary.NoteActivity" />
         <activity android:name=".Diary.NoteSendActivity" />
         <activity android:name=".Diary.PostActivity" />
         <activity android:name=".Diary.WriteActivity" />
