--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
 
     <application
         android:allowBackup="true"
@@ -14,10 +17,20 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".Plan.PlanDeleteActivity"
+
+        <receiver android:name=".DeviceBootReceiver"
+            android:enabled="false">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"></action>
+            </intent-filter>
+        </receiver>
+
+        <receiver android:name=".AlarmReceiver"></receiver>
+
+        <activity
+            android:name=".Plan.PlanDeleteActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/popupTheme">
-        </activity>
+            android:theme="@style/popupTheme" />
         <activity
             android:name=".Plan.PlanAddActivity"
             android:screenOrientation="portrait"
@@ -32,7 +45,9 @@
         <activity
             android:name=".account.AccountMainActivity"
             android:label="@string/title_activity_account_main" />
+
         <activity android:name=".SelectMainActivity" />
+
         <activity android:name=".Diary.NoteActivity" />
         <activity android:name=".Diary.NoteSendActivity" />
         <activity android:name=".Diary.PostActivity" />
