push alarm 시간 설정 add

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".push.AlarmSetActivity"></activity>
+        <activity android:name=".push.AlarmSetActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/popupTheme" />>
 
         <receiver
             android:name=".push.DeviceBootReceiver"
