--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".push.AlarmSetActivity"
+        <activity android:name=".account.SelectMonthAccount"></activity>
+        <activity
+            android:name=".push.AlarmSetActivity"
             android:screenOrientation="portrait"
             android:theme="@style/popupTheme" />
 
@@ -27,7 +29,6 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-
         <receiver android:name=".push.AlarmReceiver" />
 
         <activity
